# job-market-tools

./: database.dbml  manage.py  pyproject.toml
offers_dashboard/: asgi.py  settings.py  urls.py  wsgi.py
src/job_market_tools/: __init__.py  test.py
src/job_market_tools/db_schema/: README.md  database.dbml  database.py  schema.sql
src/job_market_tools/management/commands/: run_scrapers.py
src/job_market_tools/models/: db_models.py
src/job_market_tools/scraper/: __init__.py  base.py  manager.py  resumable.py
src/job_market_tools/scraper/boards/: __init__.py  justjoin.py
src/job_market_tools/services/: lookups.py  normalizer.py  offer_ingest.py
